testsuite/tests/deriving/should_fail/T4846.stderr

T4846.hs:29:1: error:
    • Couldn't match type ‘Bool’ with ‘BOOL’
        arising from a use of ‘GHC.Prim.coerce’
    • In the expression:
        GHC.Prim.coerce @(Expr Bool) @(Expr BOOL) (mkExpr @Bool)
      In an equation for ‘mkExpr’:
          mkExpr = GHC.Prim.coerce @(Expr Bool) @(Expr BOOL) (mkExpr @Bool)
      When typechecking the code for ‘mkExpr’
        in a derived instance for ‘B BOOL’:
        To see the code I am typechecking, use -ddump-deriv
      In the instance declaration for ‘B BOOL’
